--- a/Index2026.html
+++ b/Index2026.html
@@ -30,7 +30,7 @@
         const apiDevKey = 'p88Vf1OAXEue7UQxPhpckTqbdyHei7Sc';
         const username = 'Thunder2026';
         const password = 'Thunder2026%';
-        const proxyUrl = 'https://thunderproxy.glitch.me/api/pastebin';
+        const proxyUrl = 'https://thunderproxy2026.glitch.me/api/pastebin';
 
         async function getUserKey() {
             try {
