--- a/Index2025.html
+++ b/Index2025.html
@@ -30,7 +30,7 @@
         const apiDevKey = 'sCoRRqMCgvCYl6iZm4P5_pH-BxSgFvEe';
         const username = 'Thunder2025';
         const password = 'Thunder2024$';
-        const proxyUrl = 'https://thunderproxy.glitch.me/api/pastebin';
+        const proxyUrl = 'https://thunderproxy2024.glitch.me/api/pastebin';
 
         async function getUserKey() {
             try {
