--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li class="file html-file"><a href="DecodeBmp.html">📄 DecodeBmp.html</a></li>
             <li class="file html-file"><a href="EncodeDecodeFileToJson.html">📄 EncodeDecodeFileToJson.html</a></li>
             <li class="file html-file"><a href="EncodeFileToBmp.html">📄 EncodeFileToBmp.html</a></li>
+            <li class="file html-file"><a href="Estrie.html">📄 Estrie.html</a></li>
             <li class="file html-file"><a href="Exclude.html">📄 Exclude.html</a></li>
             <li class="file html-file"><a href="FileToZip.html">📄 FileToZip.html</a></li>
             <li class="file html-file"><a href="Gif_Creator.html">📄 Gif_Creator.html</a></li>
