--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <li class="file html-file"><a href="Estrie.html">📄 Estrie.html</a></li>
             <li class="file html-file"><a href="Exclude.html">📄 Exclude.html</a></li>
             <li class="file html-file"><a href="FileToZip.html">📄 FileToZip.html</a></li>
+            <li class="file html-file"><a href="Global_Server15.html">📄 Global_Server15.html</a></li>            
             <li class="file html-file"><a href="Gif_Creator.html">📄 Gif_Creator.html</a></li>
             <li class="file html-file"><a href="Gif_Extractor.html">📄 Gif_Extractor.html</a></li>
             <li class="file html-file"><a href="Gif_Generator.html">📄 Gif_Generator.html</a></li>
