--- a/PrintScreen.html
+++ b/PrintScreen.html
@@ -27,7 +27,7 @@
         <button type="button" onclick="uploadImage()">Upload</button>
     </form>
     <div class="progress-bar" id="progressBar"><span></span></div>
-    <p>Image URL: <span id="imageUrl"></span></p>
+    <p>Image URL: <a id="imageUrl" href="" target="_blank">Link</a></p>
     <iframe id="imageFrame" style="width: 100%; height: 500px;"></iframe>
 
     <script>
@@ -46,10 +46,11 @@
             xhr.addEventListener('load', () => {
                 if (xhr.status === 200) {
                     const data = JSON.parse(xhr.responseText);
-                    const baseUrl = 'https://printscreen.glitch.me'; // Ensure this matches your server's URL
-                    const fullUrl = `${baseUrl}${data.fileUrl}`; // Construct the full URL from the response
+                    const baseUrl = 'https://printscreen.glitch.me'; // Replace with your backend server URL
+                    const fullUrl = `${baseUrl}${data.fileUrl}`;
 
                     document.getElementById('imageUrl').innerText = fullUrl;
+                    document.getElementById('imageUrl').href = fullUrl;
                     document.getElementById('imageFrame').src = fullUrl;
                 } else {
                     console.error('Upload failed:', xhr.responseText);
@@ -60,7 +61,7 @@
                 console.error('Upload failed');
             });
 
-            xhr.open('POST', '/upload', true);
+            xhr.open('POST', 'https://printscreen.glitch.me/upload', true); // Replace with your backend server URL
             xhr.send(formData);
         }
     </script>
