--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <li class="file html-file"><a href="Paint_Canvas.html">📄 Paint_Canvas.html</a></li>
             <li class="file html-file"><a href="PakPixel.html">📄 PakPixel.html</a></li>
             <li class="file html-file"><a href="Poker_Card.html">📄 Poker_Card.html</a></li>
+            <li class="file html-file"><a href="PrintScreen.html">📄 PrintScreen.html</a></li>            
             <li class="file html-file"><a href="RemoveExclude.html">📄 RemoveExclude.html</a></li>
             <li class="file html-file"><a href="ScriptHookV_Patch.html">📄 ScriptHookV_Patch.html</a></li>
             <li class="file html-file"><a href="Street_View_Coord.html">📄 Street_View_Coord.html</a></li>
