--- a/Uploads-Files.html
+++ b/Uploads-Files.html
@@ -46,7 +46,7 @@
         const fileLinkElement = document.getElementById('fileLink');
 
         // Replace with the URL of your Glitch project
-        const uploadUrl = 'https://your-glitch-project.glitch.me/upload';
+        const uploadUrl = 'https://uploads-files.glitch.me/upload';
 
         dropZone.addEventListener('dragover', (event) => {
             event.preventDefault();
