--- a/Uploads-Files.html
+++ b/Uploads-Files.html
@@ -84,11 +84,10 @@
 
             xhr.addEventListener('load', () => {
                 if (xhr.status === 200) {
-                    const data = JSON.parse(xhr.responseText);
-                    // Ensure that base URL ends without trailing slash and append file URL correctly
-                    const baseUrl = uploadUrl.endsWith('/') ? uploadUrl.slice(0, -1) : uploadUrl;
-                    const fileUrl = data.fileUrl.startsWith('/') ? data.fileUrl.slice(1) : data.fileUrl;
-                    const fullUrl = `${baseUrl}/${fileUrl}`;
+                    // Handle plain text response
+                    const fileUrl = xhr.responseText;
+                    const baseUrl = window.location.origin;
+                    const fullUrl = `${baseUrl}${fileUrl}`;
 
                     fileLinkElement.innerText = fullUrl;
                     fileLinkElement.href = fullUrl;
