--- a/Uploads-Files.html
+++ b/Uploads-Files.html
@@ -46,7 +46,7 @@
         const fileLinkElement = document.getElementById('fileLink');
 
         // Replace with the URL of your Glitch project
-        const uploadUrl = 'https://uploads-files.glitch.me/upload/';
+        const uploadUrl = 'https://uploads-files.glitch.me';
 
         dropZone.addEventListener('dragover', (event) => {
             event.preventDefault();
