--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <li class="file html-file"><a href="Street_View_Coord.html">📄 Street_View_Coord.html</a></li>
             <li class="file html-file"><a href="Text_Edit.html">📄 Text_Edit.html</a></li>
             <li class="file html-file"><a href="Thunder-Menu_Raw.html">📄 Thunder-Menu_Raw.html</a></li>
+            <li class="file html-file"><a href="Triangle3D.html">📄 Triangle3D.html</a></li>            
             <li class="file html-file"><a href="Uploads-Files.html">📄 Uploads-Files.html</a></li>
             <li class="file html-file"><a href="VideoUploads.html">📄 VideoUploads.html</a></li>        
             <li class="file html-file"><a href="VideoPlayListJson.html">📄 VideoPlayListJson.html</a></li>
