--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 <ul class="tree-view">
     <li class="folder">📁 https://3xploitch3ats.github.io/
         <ul>
+            <li class="file html-file"><a href="AddingPictureToZipPakPixel.html">📄 AddingPictureToZipPakPixel.html</a></li>
 
                     </ul>
     </li>
